+ Refactored Titlescreen fragments with parent MainMenusFragment. + Refactored InvestigationFragment and MainMenusFragment with parent PETFragment. + Refactored activities with parent PETActivity + Encapsulated Titlescreen animation threading into TitlescreenAnimationView. + more